# tools

./: .gitignore  readme.md
cl/: Cargo.toml  gen-readme.sh  readme.md  readme.md.template
cl/src/: cmd.rs  main.rs
numeron/: main.py  readme.md
replace-with-git-grep/: readme.md  replace.sh
structure-music-files/: main.py  pyproject.toml  readme.md
