[package]
name = "easy-cp"
version = "0.2.2"
edition = "2021"
description = "A simple command line tool to copy files at deep position."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
