[tool.poetry]
name = "structure-music-files"
version = "0.1.0"
description = ""
authors = ["naoyafurudono <naoyafurudono@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "structure_music_files"}]

[tool.poetry.dependencies]
python = "^3.11"
ffmpeg-python = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
